--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "node server.js"
+        "dev": "nodemon ./src/server.js"
     },
     "keywords": [
         "nodejs",
@@ -14,6 +14,12 @@
     "author": "Web football",
     "license": "ISC",
     "dependencies": {
-        "express": "4.18.2"
+        "dotenv": "16.3.1",
+        "ejs": "3.1.9",
+        "express": "4.18.2",
+        "express-load": "1.1.16"
+    },
+    "devDependencies": {
+        "nodemon": "3.0.1"
     }
 }
