--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "dotenv": "16.3.1",
         "ejs": "3.1.9",
         "express": "4.18.2",
-        "express-load": "1.1.16"
+        "express-load": "1.1.16",
+        "mysql2": "3.6.1"
     },
     "devDependencies": {
         "nodemon": "3.0.1"
